<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.twsbrian</groupId>
  <artifactId>MobDrop2</artifactId>
  <version>0.0.1</version>
  <packaging>jar</packaging>

  <name>MobDorp2</name>
  <url>http://maven.apache.org</url>

  <repositories>
    <!--Spigot API-->
    <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <!--  <repository>
        <id>minecraft-repo</id>
        <url>https://repo.mcstats.org/content/repositories/releases/</url>
    </repository>-->
    <repository>
        <id>mojang</id>
        <name>Mojang's Repository</name>
        <url>https://libraries.minecraft.net/</url>
    </repository>
    <!--Bungeecord Repo-->
    <!--Only include if using the Spigot API dependency-->
    <repository>
        <id>bungeecord-repo</id>
        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <!-- ProtocolLib -->
    <repository>
    <id>dmulloy2-repo</id>
    <url>https://repo.dmulloy2.net/repository/public/</url>
  </repository>
  </repositories>
  
  <dependencies>
    <!--Spigot API-->
    <!--<dependency>
  		<groupId>org.spigotmc</groupId>
  		<artifactId>spigot-api</artifactId>
  		<version>1.15.2-R0.1-SNAPSHOT</version>
  		<scope>provided</scope>
  	</dependency>-->
    <!--Bukkit API-->
    <!--<dependency>
        <groupId>org.bukkit</groupId>
        <artifactId>bukkit</artifactId>
        <version>1.15.2-R0.1-SNAPSHOT</version>
        <type>jar</type>
        <scope>provided</scope>
    </dependency>-->
    
    <!--Spigot API-->
    <dependency>
           <groupId>org.spigotmc</groupId>
           <artifactId>spigot-api</artifactId>
           <version>1.13-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
    </dependency>
    <!--Bukkit API-->
    <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>bukkit</artifactId>
            <version>1.13-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
    </dependency>
    
    <dependency>
        <groupId>com.mojang</groupId>
        <artifactId>authlib</artifactId>
        <version>1.5.26</version>
        <scope>provided</scope>
    </dependency>
    
    <dependency>
	    <groupId>fr.minuskube.inv</groupId>
	    <artifactId>smart-invs</artifactId>
	    <version>1.2.7</version>
	    <scope>provided</scope>
	</dependency>
    
   	<dependency>
	    <groupId>mysql</groupId>
	    <artifactId>mysql-connector-java</artifactId>
	    <version>8.0.16</version>
	</dependency>
	
	<!-- 
	<dependency>
	    <groupId>com.comphenix.protocol</groupId>
	    <artifactId>ProtocolLib</artifactId>
	    <version>4.7.0</version>
	    <scope>provided</scope>
    </dependency> 
    -->
	
  </dependencies>
  
  <build>
      <plugins>
          <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-compiler-plugin</artifactId>
	        <version>3.10.1</version>
	        <configuration>
	          <source>1.8</source>
	          <target>1.8</target>
	        </configuration>
	      </plugin>
          <plugin>
              <artifactId>maven-assembly-plugin</artifactId>
              <version>3.0.0</version>
              <configuration>
                  <descriptorRefs>
                      <descriptorRef>jar-with-dependencies</descriptorRef>
                  </descriptorRefs>
                  <archive>
                      <manifest>
                          <addClasspath>true</addClasspath>
                      </manifest>
                  </archive>
              </configuration>
              <executions>
                  <execution>
                      <id>make-assembly</id>
                      <phase>package</phase>
                      <goals>
                          <goal>single</goal>
                      </goals>
                  </execution>
              </executions>
          </plugin>
      </plugins>
      <resources>
          <resource>
              <directory>src/main/resources</directory>
              <includes>
                  <include>**/*.properties</include>
                  <include>**/*.yml</include>
                  <include>**/*.csv</include>
                  <include>**/*.txt</include>
                  <include>**/*.json</include>
                  <include>**/*.xml</include>
              </includes>
              <filtering>true</filtering>
          </resource>
      </resources>
  </build>
  
  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

      <full.version>${project.version}</full.version>
  </properties>
</project>
